@@ -1,5 +1,6 @@
 DIST IO-Compress-Base-2.001.tar.gz 89656 RMD160 72311494464d23adb05488d0e6d2982e660386ba SHA1 614a16fb645e0a990e603c267e9aa932fd3720f4 SHA256 cdd7d7982b311f096fba710e85425797be0e43d70d8f171fb5c835565c33e892
 DIST IO-Compress-Base-2.003.tar.gz 90536 RMD160 4460a20f846867dc9c22c09812cd67e378f2dcc0 SHA1 909e83969fe514e3dba2de3e407ace30735ecbbd SHA256 3be2e2c0df77fbb7c0474465464385895866160beeb010cc6e352f75ae332631
+DIST IO-Compress-Base-2.004.tar.gz 90660 RMD160 520179c3bd9554cb66d221d568ab871bf084fa9c SHA1 5685aafc19d0c59082fba983e6c45c0c1955b4ab SHA256 0040b0ee9fc15b8546fc71671eada8eefe5975d5b83fbbc62dfa341ae3faae55
 EBUILD IO-Compress-Base-2.001.ebuild 586 RMD160 ee4f9a67ef03f29c51b99ce4dec6bccdff06d1e5 SHA1 45a7582f25c0efe4d4719c43ab6e94f4c282d5fc SHA256 f0518a4491b28cf607fda95d4efbc6f84275ed6c58c553a24698cedb6e6aec63
 MD5 ed59b3d2378ec479c0c1a60c4aba7782 IO-Compress-Base-2.001.ebuild 586
 RMD160 ee4f9a67ef03f29c51b99ce4dec6bccdff06d1e5 IO-Compress-Base-2.001.ebuild 586
@@ -8,10 +9,14 @@ EBUILD IO-Compress-Base-2.003.ebuild 585 RMD160 e87ade7d1939186b3189b3f99418eecd
 MD5 740f6e686e84dafeacdd76edadb8a49d IO-Compress-Base-2.003.ebuild 585
 RMD160 e87ade7d1939186b3189b3f99418eecd1e4fe5cf IO-Compress-Base-2.003.ebuild 585
 SHA256 e93fe1fd941666a1faa91ba72f7f4bbb6e5f992317c0009e3ab63423d8dc815d IO-Compress-Base-2.003.ebuild 585
-MISC ChangeLog 1643 RMD160 cd3a6b8e5f5ecb5993d601156dd0e158a419b61d SHA1 75530a676c4b9c36f2de2b864ce4b0d604afe18c SHA256 31064d48a4c4d63b50f66189a7ba6d0e6f422a1c6ac8bdc5c49b1a06ce722537
-MD5 14732c42cfd725b6a45a1d598d83b3c1 ChangeLog 1643
-RMD160 cd3a6b8e5f5ecb5993d601156dd0e158a419b61d ChangeLog 1643
-SHA256 31064d48a4c4d63b50f66189a7ba6d0e6f422a1c6ac8bdc5c49b1a06ce722537 ChangeLog 1643
+EBUILD IO-Compress-Base-2.004.ebuild 585 RMD160 c2f7fd2a599866539bcf5fa040ce33c39bb18666 SHA1 fb9a7a1364fd5932ce7727b7b06926991b502df2 SHA256 ea8c4ccb5adc532126601a85625fb5cd31648837a93d6143e2fa78b151c7884a
+MD5 5892a5995fb4133dc91da70f0d0f0ffa IO-Compress-Base-2.004.ebuild 585
+RMD160 c2f7fd2a599866539bcf5fa040ce33c39bb18666 IO-Compress-Base-2.004.ebuild 585
+SHA256 ea8c4ccb5adc532126601a85625fb5cd31648837a93d6143e2fa78b151c7884a IO-Compress-Base-2.004.ebuild 585
+MISC ChangeLog 1787 RMD160 438db64641d8a88dcd80a68d72c68b03edd25391 SHA1 9ace85c43ac24562ea00754807e4c97655faa5fa SHA256 b07ac209607f661ea7c9c452dd901497d2b3cd8c03c91867ec6745c1254d5ae3
+MD5 ec9ac0d3a07900eaab065009b983d6ed ChangeLog 1787
+RMD160 438db64641d8a88dcd80a68d72c68b03edd25391 ChangeLog 1787
+SHA256 b07ac209607f661ea7c9c452dd901497d2b3cd8c03c91867ec6745c1254d5ae3 ChangeLog 1787
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
 RMD160 647980838c590f54441a053916ea629e53e551c0 metadata.xml 305
@@ -22,3 +27,6 @@ SHA256 ec747c923e65d1cad6d0e2775b09ec78a0a6cd5ed74309bcc00f6311132dfe5e files/di
 MD5 6acb0dd9a7a9362091c4d9245f9da465 files/digest-IO-Compress-Base-2.003 265
 RMD160 82d657089fe62a3817a4eb796e9bab81ea2d5981 files/digest-IO-Compress-Base-2.003 265
 SHA256 2ecc36ac9512a683609addc03c5ffb9df1052499ff0cbba0d5a6e2d385fb4649 files/digest-IO-Compress-Base-2.003 265
+MD5 a37ec62b52715b69aadd5bda66baa16d files/digest-IO-Compress-Base-2.004 265
+RMD160 da142463338dfb6ffa93a0acf0a767cf302143eb files/digest-IO-Compress-Base-2.004 265
+SHA256 325e0d69bd732839651ebcc1d0e94d3b2a801854c8f7c52a0c7eebfcd8eebe3e files/digest-IO-Compress-Base-2.004 265
