@@ -1,0 +1,3 @@
+MD5 a48a6185d239985d3a9755a36c2ff659 IO-Compress-Base-2.004.tar.gz 90660
+RMD160 520179c3bd9554cb66d221d568ab871bf084fa9c IO-Compress-Base-2.004.tar.gz 90660
+SHA256 0040b0ee9fc15b8546fc71671eada8eefe5975d5b83fbbc62dfa341ae3faae55 IO-Compress-Base-2.004.tar.gz 90660
